--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "syeem",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.12.3",
     "mongoose": "^4.4.10",
     "winston": "^2.2.0"
