--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.12.3",
+    "fs": "0.0.1-security",
     "mongoose": "^4.4.10",
     "winston": "^2.2.0"
   }
