--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.12.3",
     "fs": "0.0.1-security",
     "mongoose": "^4.4.10",
+    "request": "^2.79.0",
     "winston": "^2.2.0"
   }
 }
