--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "body-parser": "^1.15.0",
     "express": "^4.12.3",
     "fs": "0.0.1-security",
+    "imagesize": "^1.0.0",
+    "jsdom": "^10.1.0",
+    "link-preview": "^1.0.0",
     "mongoose": "^4.4.10",
     "mongoose-double": "0.0.1",
+    "oembed-auto": "0.0.3",
     "request": "^2.79.0",
     "winston": "^2.2.0"
   }
