--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose-double": "0.0.1",
     "oembed-auto": "0.0.3",
     "request": "^2.79.0",
+    "request-image-size": "^1.3.0",
     "winston": "^2.2.0"
   }
 }
