--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ node_modules
 .node_repl_history
 
 aws.json
+.DS_Store
+.eslintrc
+auth_info.json
+temp.txt
+update_scripts.js
+uploads/
+visa.xlsx
