--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "bugsnag": "^2.0.1",
     "express": "^4.12.3",
     "fs": "0.0.1-security",
     "imagesize": "^1.0.0",
@@ -19,6 +20,7 @@
     "mongoose": "^4.4.10",
     "mongoose-double": "0.0.1",
     "oembed-auto": "0.0.3",
+    "password-hash-and-salt": "^0.1.4",
     "request": "^2.79.0",
     "request-image-size": "^1.3.0",
     "winston": "^2.2.0"
